# stt-module

./: Makefile  README.md  experiment_results.json  experiment_spec.yaml  output_baseline.json  output_fixed_chunking.json  output_vad_streaming.json  pyproject.toml  sample_auto_config.json  sample_auto_output.json  sample_compare_output.json  sample_eval_output.json  sample_experiment_results.json  sample_experiment_spec.yaml  sample_experiment_stdout.json  sample_visual_output.json  verify_baseline.json  verify_fixed_chunking.json  verify_vad_streaming.json
docs/: STT_ARCHITECTURE.md  STT_INTEGRATION_GUIDE.md
scripts/: test_fast.sh  test_full.sh  verify_stt_environment.py
stt/: __init__.py
stt_module/: __init__.py  cli.py  compare.py  config.py  logging_utils.py  models.py  pipeline.py  service.py
stt_module/evaluation/: __init__.py  dataset.py  metrics.py
stt_module/experiments/: __init__.py  runner.py
stt_module/integration/: __init__.py  backend_api.py  backend_examples.py  frontend.py
stt_module/stages/: chunking.py  confidence.py  noise_reduction.py  postprocess.py  preprocessing.py  recognition.py  vad.py
stt_module/utils/: audio.py
tests/: test_backend_api.py  test_chunking.py  test_compare.py  test_config.py  test_dataset_evaluation.py  test_environment_verifier.py  test_evaluation_metrics.py  test_experiment_runner.py  test_frontend_integration.py  test_import_compat.py  test_pipeline.py  test_pipeline_robustness.py  test_postprocess_confidence.py  test_preprocessing.py  test_visualization.py  test_voice_sample_integration.py
(+2 files in other folders)
